--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "firebase": "^11.8.1",
+    "google-map-react": "^2.2.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.1",
+    "sweetalert2": "^11.22.0",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
